# strsim_polars_plugin

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: apply_utils.rs  lib.rs  strsim_func_wrapper.rs  weighted_DL.rs
strsim_polars_plugin/: __init__.py  _typing.py  _utils.py  distance.py
