[package]
name = "strsim_polars_plugin"
version = "0.1.0"
edition = "2021"


[lib]
name = "strsim_polars_plugin"
crate-type = ["cdylib"]


[dependencies]
arrow = { version = "*", default-features = false }
num = "*"
polars = "0.50"
polars-arrow = "0.50"
pyo3 = { version = "*", features = ["abi3-py38"] }
pyo3-polars = { version = "0.23", features = ["derive"] }
rayon = "*"
serde = { version = "*", features = ["derive"] }
strsim = "*"
